# sales-call-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
api/: main.py
n8n/: My workflow.json
src/agent/: _schema_utils.py  enricher.py  extractor.py  follow_up.py  logger.py  schemas.py  tools.py
tests/: test_api.py  test_enricher.py  test_extractor.py  test_integration.py
tests/fixtures/: sample_transcript.txt  transcript_1_positive_discovery.txt  transcript_2_stalled_negotiation.txt  transcript_3_near_lost_deal.txt
