[project]
name = "sales-call-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
]
